<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="umeng_example_home_btn_analytics">统计分析</string>
    <string name="umeng_example_home_btn_xp">应用联盟</string>
    <string name="umeng_example_home_btn_ad">移动广告</string>
    <string name="umeng_example_home_btn_tools">工具</string>
    <string name="umeng_example_home_btn_fb">用户反馈</string>
    <string name="umeng_example_home_btn_update">自动更新</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_example_home_btn_xp_ufp">Umeng For Publisher</string>
    <string name="umeng_example_xp_home_btn_container">嵌入容器</string>
    <string name="umeng_example_xp_home_btn_banner">横幅</string>
    <string name="umeng_example_xp_home_btn_banner_ufp">"横幅
(UFP)"</string>
    <string name="umeng_example_xp_home_btn_handler">小把手</string>
    <string name="umeng_example_xp_home_btn_handler_ufp">"小把手
(UFP)"</string>
    <string name="umeng_example_xp_home_btn_tab">多页面</string>
    <string name="umeng_example_xp_home_btn_custom">自定义样式</string>
    <string name="umeng_example_xp_home_btn_wap">Web页</string>
    <string name="umeng_example_xp_home_btn_wap_ufp">"Web页
(UFP)"</string>
    <string name="umeng_example_xp_home_btn_textlink">文字链</string>
    <string name="umeng_example_xp_home_btn_container_header">"轮播大图
(UFP)"</string>
    <string name="umeng_example_xp_home_btn_push_header">"推送弹窗
(UFP)"</string>
    <string name="umeng_example_xp_home_handler_icons">"图标列表
(UFP)"</string>
    <string name="umeng_example_fb_home_btn_simple">简单反馈</string>
    <string name="actionbar_activity_not_found">打开Activity失败</string>
    <string name="umeng_example_home_hint_wait">敬请期待</string>
    <string name="intro">下面展示使用 js 调用友盟 自定义事件 APIs</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_start_download_notification">正在下载应用</string>
    <string name="umeng_common_start_patch_notification">正在更新安装包</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_common_download_finish">下载完成，请点击安装</string>
    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>
    <string name="umeng_fb_contact_info_hint">QQ, 电话等我们能联系您的联系方式</string>
    <string name="umeng_fb_contact_update_at">更新于</string>
    <string name="umeng_fb_back">返回</string>
    <string name="umeng_fb_title">用户反馈</string>
    <string name="umeng_fb_contact_title">填写联系信息</string>
    <string name="umeng_fb_contact_info">联系方式</string>
    <string name="umeng_fb_reply_content_hint">我想说</string>
    <string name="umeng_fb_send">发送</string>
    <string name="umeng_fb_reply_content_default">你好， 我是产品经理，欢迎您反馈使用产品的感受和建议</string>
    <string name="umeng_fb_reply_date_default">2013年3月12日 13:24:00</string>
    <string name="umeng_fb_notification_ticker_text">有新的回复</string>
    <string name="umeng_fb_notification_content_formatter_single_msg">新回复: %s</string>
    <string name="umeng_fb_notification_content_formatter_multiple_msg">收到来自开发者的 %d 条回复。</string>
    <string name="UMBreak_Network">未联网</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="UMNewVersion">最新版本:</string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="umeng_xp_size">大小</string>
    <string name="umeng_xp_action_open">打开</string>
    <string name="umeng_xp_action_browse">浏览</string>
    <string name="umeng_xp_action_download">下载</string>
    <string name="umeng_xp_action_callphone" />
    <string name="umeng_xp_more">更多精彩推荐</string>
    <string name="umeng_xp_back_to_top">回到顶部</string>
    <string name="umeng_xp_back">返回</string>
    <string name="umeng_xp_dowloadOrNot">是否下载推荐应用？</string>
    <string name="umeng_xp_title_info">精彩推荐</string>
    <string name="umeng_xp_dowload_dialog_dinfo">马上下载</string>
    <string name="umeng_xp_dowload_dialog_cinfo">马上拨打</string>
    <string name="umeng_xp_failed_loading">加载失败...</string>
    <string name="umeng_xp_no_browser_tips">请先安装浏览器</string>
    <string name="umeng_xp_tip_download_pre">开始下载</string>
    <string name="umeng_xp_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_xp_info_banner_deprecated">当前SDK版本不支持Banner样式,请联系客服.</string>
    <string name="pull_to_refresh_pull_label">下拉以刷新</string>
    <string name="pull_to_refresh_release_label">释放开始刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中</string>
    <string name="activity_label_entity">商品</string>
    <string name="activity_label_create_note">创建点评</string>
    <string name="activity_label_note_detail">点评详情</string>
    <string name="activity_label_complate_user">编辑用户信息</string>
    <string name="activity_label_login">登录</string>
    <string name="activity_label_register">注册</string>
    <string name="activity_label_user">用户</string>
    <string name="activity_label_search">搜索</string>
    <string name="activity_label_settings">设置</string>
    <string name="activity_label_feedback">意见反馈</string>
    <string name="action_send">发送</string>
    <string name="notice">提示</string>
    <string name="app_name">果库</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_entity_detail">商品</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="title_activity_web_page">WebPage</string>
    <string name="action_refresh">刷新</string>
    <string name="search_title">搜索</string>
    <string name="share_title">分享</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="canceled_operation">操作被取消</string>
    <string name="create_note">写点评</string>
    <string name="recomend_title">相似推荐</string>
    <string name="right_note_summary">撰写真实、有用、有趣的商品点评</string>
    <string name="hot_word">热词搜索</string>
    <string name="search_all_tab_title">所有 %s</string>
    <string name="search_liked_tab_title">我喜爱的 %s</string>
    <string name="pref_account_settings">绑定设置</string>
    <string name="pref_account_settings_banding_sina_title">绑定新浪微博</string>
    <string name="pref_account_settings_banding_sina_summary">绑定新浪微博</string>
    <string name="pref_account_settings_banding_taobao_title">绑定淘宝</string>
    <string name="pref_account_settings_banding_taobao_summary">绑定淘宝</string>
    <string name="pref_other_settings">其他</string>
    <string name="pref_other_settings_recommend_title">应用推荐</string>
    <string name="pref_other_settings_check_update">检查更新</string>
    <string name="pref_other_settings_version">当前版本 v%s</string>
    <string name="pref_other_settings_feedback_title">意见反馈</string>
    <string name="regester">注册果库</string>
    <string name="exsit_account">已有果库帐号</string>
    <string name="title_activity_account">登录</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_nickname">昵称</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_register">注册</string>
    <string name="other_login_title">第三方帐号登录</string>
    <string name="other_register_title">第三方帐号注册</string>
    <string name="action_forgot_password">忘记密码</string>
    <string name="login_progress_signing_in">登录中…</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">此项不能为空</string>
    <string name="title_loging_sina">新浪微博</string>
    <string name="title_loging_taobao">淘宝</string>
    <string name="sign_out">注销</string>
</resources>
