<?xml version="1.0" encoding="utf-8"?>
<com.umeng.ui.widget.DashboardLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/umeng_example_xp_home_btn_banner" android:text="@string/umeng_example_xp_home_btn_banner" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_handler" android:text="@string/umeng_example_xp_home_btn_handler" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_wap" android:text="@string/umeng_example_xp_home_btn_wap" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_banner_ufp" android:text="@string/umeng_example_xp_home_btn_banner_ufp" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_handler_ufp" android:text="@string/umeng_example_xp_home_btn_handler_ufp" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_handler_icons" android:text="@string/umeng_example_xp_home_handler_icons" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_wap_ufp" android:text="@string/umeng_example_xp_home_btn_wap_ufp" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_textlink" android:text="@string/umeng_example_xp_home_btn_textlink" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_tab" android:text="@string/umeng_example_xp_home_btn_tab" style="@style/DashboardButton" />
    <RelativeLayout android:background="@null" style="@style/DashboardButton">
        <Button android:id="@id/umeng_example_xp_home_btn_container" android:text="@string/umeng_example_xp_home_btn_container" style="@style/DashboardButton" />
        <TextView android:textSize="13.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/umeng_example_xp_container_tips" android:paddingBottom="7.0dip" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="30.0dip" />
    </RelativeLayout>
    <Button android:id="@id/umeng_example_xp_home_btn_container_with_header" android:text="@string/umeng_example_xp_home_btn_container_header" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_push_ad" android:text="@string/umeng_example_xp_home_btn_push_header" style="@style/DashboardButton" />
    <Button android:id="@id/umeng_example_xp_home_btn_custom" android:text="@string/umeng_example_xp_home_btn_custom" style="@style/DashboardButton" />
</com.umeng.ui.widget.DashboardLayout>