<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_account_settings">
        <CheckBoxPreference android:title="@string/pref_account_settings_banding_sina_title" android:key="pref_account_settings_banding_weibo" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_account_settings_banding_taobao_title" android:key="pref_account_settings_banding_taobao" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_other_settings" android:key="pref_other_settings">
        <Preference android:title="@string/pref_other_settings_recommend_title" android:key="pref_other_settings_recommend_app" />
        <Preference android:title="@string/pref_other_settings_feedback_title" android:key="pref_other_settings_feedback" />
        <Preference android:title="@string/pref_other_settings_check_update" android:key="pref_other_settings_check_update" />
        <Preference android:title="@string/pref_other_settings_version" android:key="pref_other_settings_version" />
        <Preference android:layout="@layout/preference_sign_out" android:key="pref_other_settings_sign_out" />
        <Preference android:layout="@layout/preference_sign_in" android:key="pref_other_settings_sign_in" />
    </PreferenceCategory>
</PreferenceScreen>