<?xml version="1.0" encoding="utf-8"?>
<com.guoku.ui.widget.GKRootView android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.guoku.ui.widget.GKScrollView android:id="@id/login_form" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" style="@style/LoginFormContainer">
                <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="70.0dip">
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/login_logo" />
                    <TextView android:gravity="right" android:id="@id/register" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/regester" style="@style/DiscriptionText" />
                </LinearLayout>
                <View android:layout_marginTop="4.0dip" style="@style/GridItemLine" />
                <TextView android:gravity="center_vertical" android:id="@id/status_message" android:layout_width="fill_parent" android:layout_height="40.0dip" android:singleLine="true" style="@style/DiscriptionText" />
                <com.guoku.ui.widget.GKAutoCompleteTextView android:textColor="@*android:color/primary_text_light" android:id="@id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_email" android:maxLines="1" android:singleLine="true" android:inputType="textEmailAddress" style="@style/TextColorHint" />
                <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_password" android:maxLines="1" android:singleLine="true" android:inputType="textPassword" android:imeOptions="normal|actionUnspecified" android:imeActionLabel="@string/action_sign_in_short" android:imeActionId="@id/login" style="@style/TextColorHint" />
                <Button android:textSize="20.0dip" android:id="@id/submit" android:layout_width="fill_parent" android:layout_marginTop="20.0dip" android:text="@string/action_sign_in_short" style="@style/GreenButton" />
                <include layout="@layout/base_social_login" />
            </LinearLayout>
        </com.guoku.ui.widget.GKScrollView>
        <include layout="@layout/base_status_layout" />
    </RelativeLayout>
</com.guoku.ui.widget.GKRootView>